# remora

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/auth/: db.rs  handlers.rs  mod.rs  models.rs
backend/src/converter/: mod.rs  ods.rs  utils.rs  xlsx.rs
backend/src/exporter/: mod.rs
backend/src/middleware/: auth.rs
web/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/list-dashboards/: route.ts
web/app/configurator/: page.tsx
web/app/login/: page.tsx
web/app/playground/: page.tsx
web/app/settings/: page.tsx
web/app/setup/: page.tsx
web/components/configurator/: Configurator.tsx
web/components/i18n/: LocaleProvider.tsx  LocaleSwitcher.tsx
web/components/layout/: ClientProviders.tsx  Footer.tsx  Header.tsx  LayoutWrapper.tsx  Sidebar.tsx
web/components/pivot/: PivotRenderer.tsx
web/components/settings/: UserCreateModal.tsx
web/components/ui/: ConfigSelectModal.tsx  ConfirmModal.tsx  DashboardSelectModal.tsx  FileUpload.tsx  FileUploadModal.tsx  Modal.tsx
web/components/widgets/: ChartWidget.tsx  WidgetRegistry.ts  WidgetWrapper.tsx
web/lib/: api.ts  dashboardSaver.ts  env.ts  fileUpload.ts  pivot.ts  report.ts  settings.ts  toast.ts  types.ts  useUserRole.ts
web/lib/api/: users.ts
web/lib/hooks/: useUsers.ts
web/lib/i18n/: dictionaries.ts
web/public/configs/: configs.json  Тест.json  Тест2.json
web/types/: react-pivottable.d.ts
(+14 files in other folders)
