[package]
name = "remora-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
calamine = "0.22"
hyper = "1"
tower-http = { version = "0.5", features = ["cors"] }
